# k8s-cost-optimizer

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_READY.md  DOCKER_FIX.md  Dockerfile  FINAL_CONFIGURATION.md  FINAL_STATUS.md  FINAL_SUBMISSION_STATUS.md  FIXES_APPLIED.md  GUIDELINES.md  PHASE2_COMPLETE.md  PHASE2_FIX_FINAL.md  PHASE2_FIX_SUMMARY.md  PROJECT_SPEC.md  QUICK_DIAGNOSTICS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_SUBMISSION_STATUS.md  READY_TO_RUN.md  REMEDIATION.md  RESUBMISSION_CHECKLIST.md  REVIEW.md  SCAFFOLDING_MANUAL.md  SETUP_COMPLETE.md  START_HERE.md  SUBMISSION_READY.md  TLDR.md  TRACES_CONFIGURATION.md  TRACE_DOCUMENTATION.md  TRACE_OPTIMIZATION_SUMMARY.md  V1_CONFIGURATION.md  VALIDATION_CHECKLIST.md  VERIFICATION_REPORT.txt  __init__.py  app.py  clean_stderr.txt  clean_stdout.txt  client.py  (+32 more)
.claude/: settings.local.json
server/: Dockerfile  __init__.py  app.py  k8s_cost_optimizer_environment.py  requirements.txt
tests/: test_env_contract.py  test_graders.py  test_inference_integration.py
traces/: trace_v1_coldstart.json  trace_v1_entropy.json  trace_v1_squeeze.json  trace_v2_coldstart_gradual.json  trace_v2_entropy_chaos.json  trace_v2_squeeze_steady.json  trace_v3_coldstart_aggressive.json  trace_v3_entropy_cascading.json  trace_v3_squeeze_oscillating.json  trace_v4_coldstart_failed.json  trace_v4_entropy_reactive_failure.json  trace_v4_squeeze_gradual.json  trace_v5_coldstart_optimal.json  trace_v5_entropy_extreme_chaos.json  trace_v5_squeeze_optimized.json  trace_v6_entropy_node_upgrade.json  trace_v6_squeeze_challenge.json  trace_v7_entropy_degradation.json  trace_v8_entropy_recovery.json  trace_v9_entropy_optimal.json
